--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "@types/core-js": "^2.5.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "esbuild": "^0.23.0",
