--- a/package.json
+++ b/package.json
@@ -142,7 +142,8 @@
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "util": "^0.12.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "webpack": "^5.93.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -165,13 +166,16 @@
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "esbuild": "^0.23.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "eslint": "^9.8.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^4.0.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
   }
