--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "type": "module",
+  "main": "app.js",
+  "engines": {
+    "node": ">=20.0.0 <21.0.0"
+  },
   "scripts": {
     "build": "yarn run nearley && yarn run sass && tsc -b && yarn run webpack",
     "lint": "yarn run prettier-base --check && eslint --max-warnings 0",
@@ -17,8 +20,8 @@
     "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.[jt]sx?$')",
     "eslint": "eslint --no-error-on-unmatched-pattern --quiet `yarn run --silent list-files`",
     "nodemon": "nodemon --max-old-space-size=6000 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
-    "webpack": "webpack --mode development --config webpack.server.js",
-    "webpack-dev-server": "npx webpack serve --config webpack.dev.js",
+    "webpack": "webpack --mode development --config webpack.server.mjs",
+    "webpack-dev-server": "npx webpack serve --config webpack.dev.mjs",
     "test": "yarn run test-loud --silent",
     "test:watch": "yarn run webpack --watch & yarn run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
@@ -88,7 +91,7 @@
     "mongoose-seed": "^0.6.0",
     "nearley": "^2.19.3",
     "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.4.16",
     "on-finished": "^2.3.0",
@@ -119,7 +122,7 @@
     "react-tag-input": "^6.8.1",
     "react-timeago": "^7.1.0",
     "reactstrap": "^9.2.2",
-    "redis": "^4.6.15",
+    "redis": "^3.1.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
     "rehype-slug": "^6.0.0",
@@ -156,6 +159,7 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@react-mock/fetch": "^0.3.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
     "@types/core-js": "^2.5.8",
     "@types/eslint__js": "^8.42.3",
@@ -175,12 +179,15 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.4",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
     "webpack-node-externals": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@4.4.0"
 }
