--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "target": "ES2020",
-    "jsx": "react-jsx",
+    "jsx": "react",
     "paths": {
       "analytics/*": ["./src/analytics/*"],
       "components/*": ["./src/components/*"],
