--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@aws-sdk/client-cloudwatch-logs": "^3.433.0",
     "@primer/octicons-react": "^19.11.0",
     "@tensorflow/tfjs-node": "^4.12.0",
-    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
     "bad-words": "^3.0.4",
@@ -80,6 +79,7 @@
     "forever-monitor": "^3.0.3",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
+    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^4.0.0",
     "micromark-factory-space": "^2.0.0",
@@ -167,6 +167,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-latex": "^2.0.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-tag-input": "^6.6.6",
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
