--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
   "browserslist": "> 0.5%, Firefox ESR, not dead, not IE > 0, not IE_Mob > 0, not safari < 7, not kaios > 0",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.433.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@primer/octicons-react": "^19.11.0",
     "@tensorflow/tfjs-node": "^4.12.0",
-    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
     "bad-words": "^3.0.4",
@@ -77,9 +78,10 @@
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.1.0",
-    "forever-monitor": "^3.0.3",
+    "forever-monitor": "^1.7.2",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
+    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^4.0.0",
     "micromark-factory-space": "^2.0.0",
@@ -106,9 +108,6 @@
     "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.0.3",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-latex": "^2.0.0",
@@ -116,9 +115,7 @@
     "react-markdown": "^9.0.1",
     "react-player": "^2.6.1",
     "react-qr-code": "^2.0.15",
-    "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.3.0",
-    "react-tag-input": "^6.8.1",
     "react-timeago": "^7.1.0",
     "reactstrap": "^9.2.2",
     "redis": "^3.1.2",
@@ -165,19 +162,13 @@
     "@types/nearley": "^2.11.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-latex": "^2.0.3",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/react-tag-input": "^6.6.6",
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
-    "eslint": "^9.8.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint": "^9.11.1",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "raw-loader": "^4.0.2",
