--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=20.0.0 <21.0.0"
   },
   "scripts": {
-    "build": "yarn run nearley && yarn run sass && tsc -b && yarn run webpack",
+    "build": "yarn run nearley && yarn run sass && tsc -b && yarn run webpack &&  && npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css",
     "lint": "yarn run prettier-base --check && yarn run eslint --max-warnings 0",
     "bash": "bash",
     "beautify": "yarn run prettier",
@@ -25,7 +25,7 @@
     "test:watch": "yarn run webpack --watch & yarn run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
     "ci-build": "yarn run nearley && yarn run sass && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
-    "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run webpack --watch",
+    "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run webpack --watch  & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch",
     "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
     "download-model": "node --max-old-space-size=4096 jobs/download_model.js",
@@ -50,6 +50,7 @@
     "@aws-sdk/client-cloudwatch-logs": "^3.433.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@headlessui/react": "^2.1.8",
     "@primer/octicons-react": "^19.11.0",
     "@tensorflow/tfjs-node": "^4.12.0",
     "assert": "^2.0.0",
@@ -166,13 +167,16 @@
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
+    "postcss": "^8.4.47",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.13",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0",
