--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^2.1.8",
     "@primer/octicons-react": "^19.11.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tensorflow/tfjs-node": "^4.12.0",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
