--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^4.2.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "classnames": "^2.2.6",
     "clone": "^2.1.2",
     "compression": "^1.7.4",
