--- a/package.json
+++ b/package.json
@@ -164,9 +164,11 @@
     "@types/eslint__js": "^8.42.3",
     "@types/nearley": "^2.11.5",
     "@types/react": "^18.3.3",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
+    "@types/shuffle-seed": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
