--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "sync-podcasts": "node --max-old-space-size=8192 jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
     "setup:local": "yarn start:localstack && yarn setup:local:env && yarn setup:local:localstack && yarn setup:local:files && yarn setup:local:db && yarn update-cards",
-    "setup:local:localstack": "./scripts/init_localstack.sh",
+    "setup:local:localstack": "./scripts/local/init_localstack.sh",
     "setup:local:env": "cp .env_EXAMPLE .env",
     "setup:local:files": "node one_shot_scripts/create_local_files.js",
     "setup:local:db": "node --max-old-space-size=8192 one_shot_scripts/createTables.js",
@@ -61,6 +61,7 @@
     "@primer/octicons-react": "^19.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tensorflow/tfjs-node": "^4.12.0",
+    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
     "bad-words": "^3.0.4",
@@ -76,6 +77,7 @@
     "connect-flash": "^0.1.1",
     "core-js": "^3.33.1",
     "csurf": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "dynamodb-store": "^1.2.0",
     "elo-rating": "^1.0.1",
@@ -91,7 +93,6 @@
     "forever-monitor": "^1.7.2",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
-    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^4.0.0",
     "micromark-factory-space": "^2.0.0",
