--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:watch": "yarn run webpack --watch & yarn run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
     "ci-build": "yarn run nearley && yarn run sass && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
-    "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run webpack --watch  & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch",
+    "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run tailwind:watch & yarn run webpack --watch & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
     "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=8192 force_update.js",
     "download-model": "node --max-old-space-size=8192 jobs/download_model.js",
