--- a/packages/server/public/manifest.json
+++ b/packages/server/public/manifest.json
@@ -10,7 +10,6 @@
   "CardSearchPage": "/js/CardSearchPage.9f99a214.bundle.js",
   "CardUpdatesPage": "/js/CardUpdatesPage.6b910f49.bundle.js",
   "CommentPage": "/js/CommentPage.b21ebb25.bundle.js",
-  "commons": "/js/commons.ab5bf790.bundle.js",
   "ContactPage": "/js/ContactPage.e6567e49.bundle.js",
   "CreateNewRecordPage": "/js/CreateNewRecordPage.f67560d1.bundle.js",
   "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.982c73a1.bundle.js",
@@ -18,8 +17,8 @@
   "CubeAnalysisPage": "/js/CubeAnalysisPage.be853b78.bundle.js",
   "CubeBlogPage": "/js/CubeBlogPage.e337c55a.bundle.js",
   "CubeComparePage": "/js/CubeComparePage.550f2512.bundle.js",
-  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.96ca9487.bundle.js",
   "CubeDeckPage": "/js/CubeDeckPage.612b979a.bundle.js",
+  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.96ca9487.bundle.js",
   "CubeDraftPage": "/js/CubeDraftPage.80a0ebcb.bundle.js",
   "CubeHistoryPage": "/js/CubeHistoryPage.fd9ff8c3.bundle.js",
   "CubeListPage": "/js/CubeListPage.dae493c8.bundle.js",
@@ -70,8 +69,9 @@
   "UserCubePage": "/js/UserCubePage.a14042a3.bundle.js",
   "UserDecksPage": "/js/UserDecksPage.7ad758a5.bundle.js",
   "UserSocialPage": "/js/UserSocialPage.d6b101da.bundle.js",
-  "vendors": "/js/vendors.13bf3e69.bundle.js",
   "VersionPage": "/js/VersionPage.4a140648.bundle.js",
   "VideoPage": "/js/VideoPage.b041f1bf.bundle.js",
-  "VideosPage": "/js/VideosPage.20352d97.bundle.js"
+  "VideosPage": "/js/VideosPage.20352d97.bundle.js",
+  "commons": "/js/commons.ab5bf790.bundle.js",
+  "vendors": "/js/vendors.13bf3e69.bundle.js"
 }
