--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "tailwind": "npx postcss ./src/css/stylesheet.css -o ../server/public/css/stylesheet.css --watch",
-    "tailwind:build": "npx postcss ./src/css/stylesheet.css -o ../server/public/css/stylesheet.css",
+    "tailwind:build": "npx postcss ./src/css/stylesheet.css -o ../server/public/css/stylesheet.css && npx prettier --write ../server/public/css/stylesheet.css",
     "start": "npm run tailwind & webpack serve",
     "build": "cross-env NODE_ENV=production npm run tailwind:build && cross-env NODE_ENV=production webpack && node generate-manifest.js",
     "test": "npx jest --coverage=false",
@@ -66,18 +66,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
