--- a/packages/recommenderService/package.json
+++ b/packages/recommenderService/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.529.1",
     "@aws-sdk/client-s3": "^3.927.0",
+    "@aws-sdk/credential-providers": "^3.927.0",
     "@aws-sdk/lib-storage": "^3.927.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "archiver": "^7.0.1",
     "compression": "^1.8.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -36,6 +38,7 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.2",
     "@types/compression": "^1.8.1",
     "@types/response-time": "^2.3.8",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
